--- a/HTML/Ejercicio navidad/html/index.html
+++ b/HTML/Ejercicio navidad/html/index.html
@@ -21,22 +21,22 @@
 <body>
     <div>
         <div id="titulo">
-            <h1><span id="tituloColor">Eumer</span>Muebles</h1>
+            <h1><span class="tituloColor">Eumer</span>Muebles</h1>
         </div>
         <hr>
         <div id="cajaMenu">
             <nav>
                 <ul id="menu">
                     <li><a href="#titulo">Inicio</a></li>
-                    <li><a href="categorias.html" target="_blank">Categor&iacute;as</a></li>
-                    <li><a href="precios.html" target="_blank">Precios</a></li>
-                    <li><a href="tienda.html" target="_blank">Tienda</a></li>
-                    <li><a href="coleccion.html" target="_blank">Nuestra colecci&oacute;n</a></li>
-                    <li><a href="fabricacion.html" target="_blank">Proceso de fabricaci&oacute;n</a></li>
-                    <li><a href="ofertas.html" target="_blank">Ofertas</a></li>
-                    <li><a href="nosotros.html" target="_blank">Qui&eacute;nes s&oacute;mos</a></li>
-                    <li><a href="contacto.html" target="_blank">Contacto</a></li>
-                    <li><a href="legal.html" target="_blank">Legal</a></li>
+                    <li><a href="categorias.html">Categor&iacute;as</a></li>
+                    <li><a href="precios.html">Precios</a></li>
+                    <li><a href="tienda.html">Tienda</a></li>
+                    <li><a href="coleccion.html">Nuestra colecci&oacute;n</a></li>
+                    <li><a href="fabricacion.html">Proceso de fabricaci&oacute;n</a></li>
+                    <li><a href="ofertas.html">Ofertas</a></li>
+                    <li><a href="nosotros.html">Qui&eacute;nes s&oacute;mos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="https://es.wikipedia.org/wiki/Leyes_de_Espa%C3%B1a" target="_blank">Legal</a></li>
                 </ul>
             </nav>
         </div>
@@ -80,7 +80,7 @@
         </div>
         <div id="video">
             <div class="videos">
-                <iframe width="602" height="315" src="https://www.youtube.com/embed/Tm5PKYZ3dCY"
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/Tm5PKYZ3dCY"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
@@ -88,7 +88,7 @@
                     instalaciones</p>
             </div>
             <div class="videos">
-                <iframe width="602" height="315" src="https://www.youtube.com/embed/eh7i1U5GOaI"
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/eh7i1U5GOaI"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
@@ -96,7 +96,7 @@
                     instalaciones</p>
             </div>
             <div class="videos">
-                <iframe width="602" height="315" src="https://www.youtube.com/embed/SFdaXbJWAlw"
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/SFdaXbJWAlw"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
