--- a/HTML/Ejercicio navidad/html/categorias.html
+++ b/HTML/Ejercicio navidad/html/categorias.html
@@ -109,6 +109,7 @@
         <tr>
             <td colspan="2">
                 <a href="compras.html"><button id="boton1">¡Lo Quiero!</button></a>
+                <button id="boton11" onclick="alert('Se te avisará cuando haya stock en nuestro almacén')">Notifícame cuando haya stock</button>
             </td>
         </tr>
     </table>
