--- a/HTML/Ejercicio navidad/html/compras.html
+++ b/HTML/Ejercicio navidad/html/compras.html
@@ -20,7 +20,8 @@
 
 <body id="error">
     <div>
-        <h1>Hubo un error al procesar la compra <p>&NonBreakingSpace;</p><a href="index.html"><span>Volver</span></a></h1>
+        <h1>Hubo un error al procesar la compra <p>&NonBreakingSpace;</p><a href="index.html"><span>Volver</span></a>
+        </h1>
         <img src="../media/error.png">
     </div>
 </body>
