--- a/HTML/Ejercicio navidad/html/index.html
+++ b/HTML/Ejercicio navidad/html/index.html
@@ -27,7 +27,7 @@
         <div id="cajaMenu">
             <nav>
                 <ul id="menu">
-                    <li><a href="#titulo">Inicio</a></li>
+                    <li><a href="#titulo">Inicio</a>
                     <li><a href="categorias.html">Categor&iacute;as</a></li>
                     <li><a href="precios.html">Precios</a></li>
                     <li><a href="tienda.html">Tienda</a></li>
@@ -100,7 +100,8 @@
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-                <p>En el siguiente video se muestra el proceso de fabricaci&oacute;n de los muebles de cocina hechos de pino en nuestras
+                <p>En el siguiente video se muestra el proceso de fabricaci&oacute;n de los muebles de cocina hechos de
+                    pino en nuestras
                     instalaciones</p>
             </div>
         </div>
