--- a/HTML/FlexBox/ejercicio10/flexbox-Ej010.html
+++ b/HTML/FlexBox/ejercicio10/flexbox-Ej010.html
@@ -29,10 +29,10 @@
       <h3>Cuatro 💔</h3>
     </div>
     <div style="background-color: blue;">
-      <h3>Cinco 💦</h3>
+      <h3>Cinco 😈</h3>
     </div>
     <div style="background-color: purple;">
-      <h3>Seis 😈</h3>
+      <h3>Seis 💦</h3>
     </div>
   </div>
 </body>
