--- a/HTML/FlexBox/ejercicio10/flexbox-Ej010.html
+++ b/HTML/FlexBox/ejercicio10/flexbox-Ej010.html
@@ -16,22 +16,22 @@
 
 <body>
   <div class="flex-container">
-    <div style="background-color: aqua; flex-grow: 2;">
+    <div style="background-color: aqua; flex: 0 0 150px">
       <h3>Uno 😀</h3>
     </div>
-    <div style="background-color: darkcyan; flex-grow: 2;">
+    <div style="background-color: darkcyan; flex: 0 0 150px">
       <h3>Dos 🤣</h3>
     </div>
-    <div style="background-color: white; flex-grow: 3;">
+    <div style="background-color: gray; flex: 0 0 200px">
       <h3>Tres 😎</h3>
     </div>
-    <div style="background-color: red;">
+    <div style="background-color: red; flex: 0 0 119px">
       <h3>Cuatro 💔</h3>
     </div>
-    <div style="background-color: blue;">
+    <div style="background-color: blue; flex: 0 0 48vh">
       <h3>Cinco 😈</h3>
     </div>
-    <div style="background-color: purple;">
+    <div style="background-color: purple; flex: 0 0 48vh">
       <h3>Seis 💦</h3>
     </div>
   </div>
