--- a/HTML/Noticias Media Queries/html/index.html
+++ b/HTML/Noticias Media Queries/html/index.html
@@ -32,7 +32,28 @@
       <img src="../media/foto.png">
     </div>
   </div>
+  <br>
+
+  <div class="col-12">
+    <img class="col-6" src="https://www.lucenahoy.com/media/lucenahoy/images/2021/01/01/2021010100000078962.png">
   </div>
+  <br>
+  <div class="col-12 publi">
+    <img src="../media/publi2.png">
+  </div>
+  <br>
+
+  <div class="col-12 publi">
+    <img src="../media/publi3.png">
+  </div>
+  <br>
+
+  <div class="col-12 publi">
+    <img class="col-6" src="https://www.lucenahoy.com/media/lucenahoy/images/2021/01/01/2021010100000078962.png">
+    <img class="col-6" src="https://www.lucenahoy.com/media/lucenahoy/images/2021/01/01/2021010100000078962.png">
+  </div>
+  <br>
+
 </body>
 
 </html>
