--- a/HTML/Noticias Media Queries/html/index.html
+++ b/HTML/Noticias Media Queries/html/index.html
@@ -49,8 +49,8 @@
   <br>
 
   <div class="col-12 publi">
-    <img class="col-6" src="https://www.lucenahoy.com/media/lucenahoy/images/2021/01/01/2021010100000078962.png">
-    <img class="col-6" src="https://www.lucenahoy.com/media/lucenahoy/images/2021/01/01/2021010100000078962.png">
+    <img class="col-6" src="../media/foto.png">
+    <img class="col-6" src="../media/publi2.png">
   </div>
   <br>
 
