preguntar en clase

--- a/HTML/Noticias Media Queries/html/index.html
+++ b/HTML/Noticias Media Queries/html/index.html
@@ -49,11 +49,68 @@
   <br>
 
   <div class="col-12 publi">
-    <img class="col-6" src="../media/foto.png">
-    <img class="col-6" src="../media/publi2.png">
+    <div class="pub1 col-6">
+      <img src="../media/foto.png">
+    </div>
+    <div class="col-6">
+      <img src="../media/publi.png">
+    </div>
+  </div>
+
+  <br>
+  <!--
+  <div class="principal col-6">
+    <div class="noticia" style="flex: 0 0 15vh;">
+      <img src="../media/noti1.png">
+    </div>
+    <div class="noticia" style="flex: 0 0 15vh;">
+      <img src="../media/noti2.png">
+    </div>
   </div>
   <br>
+  <div class="principal col-6">
+    <div class="publi" style="flex: 0 0 10vh;">
+      <img src="../media/publi.png">
+    </div>
+    <div class="publi" style="flex: 0 0 10vh;">
+      <img src="../media/publi2.png" style="height: 33vh;">
+    </div>
+    <div class="publi" style="flex: 0 0 10vh;">
+      <img src="../media/publi3.png" style="height: 33vh;">
+    </div>
+  </div> -->
 
+  <div class="principal">
+    <div style="flex: 0 0 200px" class="noticia">
+      <img src="../media/noti1.png">
+    </div>
+    <div style="flex: 0 0 200px" class="noticia">
+      <img src="../media/noti2.png">
+    </div>
+    <div style="flex: 0 0 133px" class="publi">
+      <img src="../media/publi.png">
+    </div>
+    <div style="flex: 0 0 133px" class="publi">
+      <img src="../media/publi2.png">
+    </div>
+    <div style="flex: 0 0 133px" class="publi">
+      <img src="../media/publi3.png">
+    </div>
+  </div>
+
+  <br>
+
+  <div class="col-12 noticia">
+    <div class="pub1 col-6">
+      <img src="../media/noti1.png" width="100%">
+    </div>
+    <div class="col-6">
+      <img src="../media/noti1.png" width="100%">
+     </div>
+  <!--  <div class="col-4">
+      <img src="../media/noti1.png">
+     </div> -->
+  </div>
 </body>
 
 </html>
