seguir en clase

--- a/HTML/Noticias Media Queries/html/index.html
+++ b/HTML/Noticias Media Queries/html/index.html
@@ -101,15 +101,15 @@
   <br>
 
   <div class="col-12 noticia">
-    <div class="pub1 col-6">
+    <div class="pub1 col-4">
       <img src="../media/noti1.png" width="100%">
     </div>
-    <div class="col-6">
+    <div class="col-4">
       <img src="../media/noti1.png" width="100%">
-     </div>
-  <!--  <div class="col-4">
-      <img src="../media/noti1.png">
-     </div> -->
+    </div>
+    <div class="col-4">
+      <img src="../media/noti1.png" width="100%">
+    </div>
   </div>
 </body>
 
