--- a/HTML/Noticias Media Queries/html/index.html
+++ b/HTML/Noticias Media Queries/html/index.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <div class="publi col_12">
+  <div class="publicidad col_12">
     <div class="pub1 col-6">
       <img src="../media/publi.png">
     </div>
@@ -38,17 +38,17 @@
     <img class="col-6" src="https://www.lucenahoy.com/media/lucenahoy/images/2021/01/01/2021010100000078962.png">
   </div>
   <br>
-  <div class="col-12 publi">
+  <div class="col-12 publicidad">
     <img src="../media/publi2.png">
   </div>
   <br>
 
-  <div class="col-12 publi">
+  <div class="col-12 publicidad">
     <img src="../media/publi3.png">
   </div>
   <br>
 
-  <div class="col-12 publi">
+  <div class="col-12 publicidad">
     <div class="pub1 col-6">
       <img src="../media/foto.png">
     </div>
@@ -80,20 +80,15 @@
     </div>
   </div> -->
 
-  <div class="principal">
-    <div style="flex: 0 0 200px" class="noticia">
-      <img src="../media/noti1.png">
+  <div class="principal col-12">
+    <div class="noticia col-8">
+      <img src="../media/noti1.png" style="width: 100%;">
+      <img src="../media/noti2.png" style="width: 100%;">
     </div>
-    <div style="flex: 0 0 200px" class="noticia">
-      <img src="../media/noti2.png">
-    </div>
-    <div style="flex: 0 0 133px" class="publi">
-      <img src="../media/publi.png">
-    </div>
-    <div style="flex: 0 0 133px" class="publi">
+
+    <div class="publicidad col-4">
+      <img src="../media/publi3.png">
       <img src="../media/publi2.png">
-    </div>
-    <div style="flex: 0 0 133px" class="publi">
       <img src="../media/publi3.png">
     </div>
   </div>
