--- a/HTML/Boostrap formulario/createacc.html
+++ b/HTML/Boostrap formulario/createacc.html
@@ -11,34 +11,63 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body class="bg-danger">
+<body class="bg-primary">
   <div class="row justify-content-center mt-5">
-    <div class="col-lg-4">
+    <div class="col-sm-4">
       <div class="card">
         <div class="card-header text-center p-5">
-          <h4>Login</h4>
+          <h4>Create Account</h4>
         </div>
         <div class="card-body">
           <form>
-            <div>
-              <label for="email" class="form-label">First name:</label>
-              <input type="text" class="form-control" placeholder="Username">
+            <div class="row">
+
+
+              <div class="col-sm-6">
+                <label for="email" class="form-label">First name:</label>
+                <input type="text" class="form-control" placeholder="First name">
+              </div>
+
+              <div class="col-sm-6">
+                <label for="email" class="form-label">Last name:</label>
+                <input type="text" class="form-control" placeholder="Last name">
+              </div>
             </div>
-          
             <div>
-              <label for="email" class="form-label">Last name:</label>
-              <input type="text" class="form-control" placeholder="Your Email">
+              <label for="email" class="form-label">Email:</label>
+              <input type="email" class="form-control" placeholder="Enter email">
             </div>
-          </form> 
+            <div class="row">
+
+              <div class="col-sm-6">
+                <label for="email" class="form-label">Password:</label>
+                <input type="password" class="form-control" placeholder="Password" required>
+                <div class="valid-feedback">Valid.</div>
+                <div class="invalid-feedback">Please fill out this field.</div>
+              </div>
+
+              <div class="col-sm-6">
+                <label for="email" class="form-label">Confirm Password:</label>
+                <input type="password" class="form-control" placeholder="Confirm Password" required>
+                <div class="valid-feedback">Valid.</div>
+                <div class="invalid-feedback">Please fill out this field.</div>
+              </div>
+            </div>
+            <div>
+          </form>
+          <div class="row">
+            <div><button type="button" class="btn btn-primary my-3 col-12">Create acc</button>
+            </div>
+          </div>
         </div>
         <div class="card-footer text-center">
-          <a href="#">Sign up!</a>
+          <a href="login.html">Have an acc? Go to login!</a>
         </div>
       </div>
     </div>
   </div>
   <footer>
-    <div class="container-fluid bg-secondary p-4 m-4">
+    <div class="container-fluid bg-white p-4 fixed-bottom">
       <div class="row">
         <div class="col">Copyright © Your Website</div>
         <div class="col text-end">Privacy Policy</div>
