--- a/HTML/Boostrap formulario/login.html
+++ b/HTML/Boostrap formulario/login.html
@@ -26,7 +26,9 @@
             </div>
             <div class="mb-3">
               <label for="pwd" class="form-label">Password:</label>
-              <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+              <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd" required>
+              <div class="valid-feedback">Valid.</div>
+              <div class="invalid-feedback">Please fill out this field.</div>
             </div>
             <div class="form-check mb-3">
               <label class="form-check-label">
@@ -35,7 +37,7 @@
             </div>
             <div class="row">
               <div class="col-9">
-                <a href="#">Forgot password</a>
+                <a href="forgot.html">Forgot password</a>
               </div>
               <div class="col-3 mb-3 text-end">
                 <button type="submit" class="btn btn-primary">Login</button>
@@ -51,7 +53,7 @@
     </div>
   </div>
   <footer>
-    <div class="container-fluid bg-secondary p-4 m-4">
+    <div class="container-fluid bg-white p-4 fixed-bottom">
       <div class="row">
         <div class="col">Copyright © Your Website</div>
         <div class="col text-end">Privacy Policy</div>
