--- a/HTML/Boostrap formulario/createacc.html
+++ b/HTML/Boostrap formulario/createacc.html
@@ -19,7 +19,7 @@
           <h4>Create Account</h4>
         </div>
         <div class="card-body">
-          <form>
+          <form class="was-validated">
             <div class="row">
 
 
