--- a/HTML/Boostrap formulario/forgot.html
+++ b/HTML/Boostrap formulario/forgot.html
@@ -19,7 +19,7 @@
           <h4>Password Recovery</h4>
         </div>
         <div class="card-body">
-          <form>
+          <form class="was-validated">
 
             <div class="row">
               <p class="text-muted">Enter email to recover pass</p>
