--- a/HTML/Boostrap formulario/login.html
+++ b/HTML/Boostrap formulario/login.html
@@ -19,7 +19,7 @@
           <h4>Login</h4>
         </div>
         <div class="card-body">
-          <form action="#">
+          <form action="#" class="was-validated">
             <div class="mb-3 mt-3">
               <label for="email" class="form-label">Email:</label>
               <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
