--- a/HTML/Boostrap mundo today/index.html
+++ b/HTML/Boostrap mundo today/index.html
@@ -17,82 +17,141 @@
 </head>
 
 <body>
-    <div class="bg-light sticky-top">
+  <div class="bg-light">
     <div class="container mx-auto">
-        <div class="row d-flex align-items-center">
-          <div class="col-3 ps-5">
-            <i class="fa-brands fa-facebook-f p-1 iconos"></i>
-            <i class="fa-brands fa-instagram p-1 iconos"></i>
-            <i class="fa-brands fa-twitter p-1 iconos"></i>
-            <i class="fa-brands fa-youtube p-1 iconos"></i>
-          </div>
-    
-          <div class="col-6">
-            <img src="media/logo.png" class="img-fluid" height="75" alt="">
-          </div>
-    
-          <div class="col-3 mt-3">
-            <a href="#" class="text-dark d-none d-sm-inline d-sm-none d-md-inline d-md-none d-lg-inline" style="text-decoration: none;">Iniciar sesión</a>
-            <a href="form.html" class="btn btn-info justify-content-end ms-3 text-dark">Hazte suscriptor</a>
-          </div>
+      <div class="row d-flex align-items-center">
+        <div class="col-3 ps-5">
+          <i class="fa-brands fa-facebook-f p-1 iconos"></i>
+          <i class="fa-brands fa-instagram p-1 iconos"></i>
+          <i class="fa-brands fa-twitter p-1 iconos"></i>
+          <i class="fa-brands fa-youtube p-1 iconos"></i>
+        </div>
+
+        <div class="col-6">
+          <img src="media/logo.png" class="img-fluid" height="75" alt="">
+        </div>
+
+        <div class="col-3 mt-3">
+          <a href="#" class="text-dark d-none d-sm-inline d-sm-none d-md-inline d-md-none d-lg-inline"
+            style="text-decoration: none;">Iniciar sesión</a>
+          <a href="form.html" class="btn btn-info justify-content-end ms-3 text-dark">Hazte suscriptor</a>
         </div>
       </div>
+    </div>
 
     <p style="background-color: orange; text-align: center; color: white; text-transform: uppercase;" class="mt-3">-
       La actualidad del mañana -</p>
-    <nav class="navbar navbar-expand-sm bg-light justify-content-center navbar-light">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Internacional</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">España</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Deportes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Cultura</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Sociedad</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Ciencia y Tecnolog&iacute;a</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Gente</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Deportes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">V&iacute;deos</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Tienda</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Ropa</a></li>
-            <li><a class="dropdown-item" href="#">Coches</a></li>
-            <li><a class="dropdown-item" href="#">Casas</a></li>
-          </ul>
-        </li>
-      </ul>
+    <nav class="navbar sticky-top navbar-expand-md bg-light justify-content-center navbar-light">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Internacional</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">España</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Deportes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Cultura</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Sociedad</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Ciencia y Tecnolog&iacute;a</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Gente</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Deportes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">V&iacute;deos</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Tienda</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Ropa</a></li>
+              <li><a class="dropdown-item" href="#">Coches</a></li>
+              <li><a class="dropdown-item" href="#">Casas</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="card col-md-12 mb-4">
+        <img class="card-img-top" src="media/mascamas-696x464.jpg" alt="Card image">
+        <div class="card-body">
+          <h4 class="card-title">Un hombre desata la septima ola de la pandemia por ir al baño del restaurante sin
+            mascarilla</h4>
+          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae mollitia
+            nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt eos
+            consequatur non! Ipsam quia quae dolore doloribus?</p>
+        </div>
+      </div>
+      <div class="card col-md-6">
+        <img class="card-img-top" src="media/adcd-324x160.jpg" alt="Card image">
+        <div class="card-body">
+          <h4 class="card-title">Un hombre desata la septima ola de la pandemia por ir al baño del restaurante sin
+            mascarilla</h4>
+          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae mollitia
+            nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt eos
+            consequatur non! Ipsam quia quae dolore doloribus?</p>
+        </div>
+      </div>
+      <div class="card col-md-6">
+        <img class="card-img-top" src="media/horoscopos-324x160.jpg" alt="Card image">
+        <div class="card-body">
+          <h4 class="card-title">Un hombre desata la septima ola de la pandemia por ir al baño del restaurante sin
+            mascarilla</h4>
+          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae mollitia
+            nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt eos
+            consequatur non! Ipsam quia quae dolore doloribus?</p>
+        </div>
+      </div>
+      <div class="card col-md-12 my-4">
+        <img class="card-img-top" src="media/iStock-1290775346-324x160.jpg" alt="Card image">
+        <div class="card-body">
+          <h4 class="card-title">Un hombre desata la septima ola de la pandemia por ir al baño del restaurante sin
+            mascarilla</h4>
+          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae mollitia
+            nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt eos
+            consequatur non! Ipsam quia quae dolore doloribus?</p>
+        </div>
+      </div>
+      <div class="card col-md-6">
+        <img class="card-img-top" src="media/iStock-172296647-324x160.jpg" alt="Card image">
+        <div class="card-body">
+          <h4 class="card-title">Un hombre desata la septima ola de la pandemia por ir al baño del restaurante sin
+            mascarilla</h4>
+          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae mollitia
+            nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt eos
+            consequatur non! Ipsam quia quae dolore doloribus?</p>
+        </div>
+      </div>
+      <div class="card col-md-6">
+        <img class="card-img-top" src="media/iStock-696446076-324x160.jpg" alt="Card image">
+        <div class="card-body">
+          <h4 class="card-title">Un hombre desata la septima ola de la pandemia por ir al baño del restaurante sin
+            mascarilla</h4>
+          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptas quae mollitia
+            nesciunt. Eum, assumenda asperiores necessitatibus obcaecati blanditiis tempore dolores nesciunt eos
+            consequatur non! Ipsam quia quae dolore doloribus?</p>
+        </div>
+      </div>
+    </div>
   </div>
-  </div>
-  </nav>
-</div>
-  <br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br>
-  <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br>
-  <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br>
-  <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br>
-  <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br>
-  <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br>
-  <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br>
-  <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br>
-  <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br><br> <br> <br>
-  <br>
+
 </body>
 
 </html>
