--- a/HTML/Pruebas/index.html
+++ b/HTML/Pruebas/index.html
@@ -464,6 +464,118 @@
         </div>
 
 
+ <nav class="navbar navbar-expand-lg sticky-top  navbar-dark bg-dark fixed-top justify-content-end mb-5">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="javascript:void(0)">Gambito de dama</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse " id="mynavbar">
+                <ul class="navbar-nav me-auto ">
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript:void(0)">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript:void(0)">Personajes</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button"
+                            data-bs-toggle="dropdown">Capitulos</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Capitulos 1</a></li>
+                            <li><a class="dropdown-item" href="#">Capitulos 2</a></li>
+                            <li><a class="dropdown-item" href="#">Capitulos 3</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="formulario.html">Contacto</a>
+
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <div class="container mb-5">
+        <div class="row">
+            <div class="col-lg-3">
+                <div class="card">
+                    <img class="card-img-top" src="media/300x200.png" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In quidem iste
+                            officiis quas
+                            a
+                            aspernatur temporibus esse sed quis rem, recusandae consectetur repellendus totam voluptas
+                            accusantium
+                            adipisci
+                            ipsam exercitationem magni?</p>
+                        <div class="card-footer">
+                            <a href="#" class="btn btn-primary">Find out more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="card">
+                    <img class="card-img-top" src="media/300x200.png" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In quidem iste
+                            officiis quas
+                            a
+                            aspernatur temporibus esse sed quis rem, recusandae consectetur repellendus totam voluptas
+                            accusantium
+                            adipisci
+                            ipsam exercitationem magni?</p>
+                        <div class="card-footer">
+                            <a href="#" class="btn btn-primary">Find out more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="card">
+                    <img class="card-img-top" src="media/300x200.png" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In quidem iste
+                            officiis quas
+                            a
+                            aspernatur temporibus esse sed quis rem, recusandae consectetur repellendus totam voluptas
+                            accusantium
+                            adipisci
+                            ipsam exercitationem magni?</p>
+                        <div class="card-footer">
+                            <a href="#" class="btn btn-primary">Find out more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="card">
+                    <img class="card-img-top" src="media/300x200.png" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In quidem iste
+                            officiis quas
+                            a
+                            aspernatur temporibus esse sed quis rem, recusandae consectetur repellendus totam voluptas
+                            accusantium
+                            adipisci
+                            ipsam exercitationem magni?</p>
+                        <div class="card-footer">
+                            <a href="#" class="btn btn-primary">Find out more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
