--- a/XSL/EjerciciosXSL/EjercicioExamenGormiti/gormiti.html
+++ b/XSL/EjerciciosXSL/EjercicioExamenGormiti/gormiti.html
@@ -2,13 +2,17 @@
             img {
             width:50px;
             }
+            th {
+            color:white;
+            background-color:blue;
+            }
         </style><html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
       <title>Gormiti</title>
    </head>
    <body>
-      <table>
+      <table width="100%">
          <tr>
             <th></th>
             <th>Gormiti</th>
@@ -19,7 +23,7 @@
             <td><img src="http://webdidacticarafaelmunoz.appspot.com/lmsgi/ejercicios-cap5/examen/2014-enero/gormitis/volcan.png"></td>
             <td>volcan</td>
          </tr>
-         <tr style="background:&#xA;             #000AFF">
+         <tr style="background:&#xA;             #00CAFF">
             <td>2</td>
             <td><img src="http://webdidacticarafaelmunoz.appspot.com/lmsgi/ejercicios-cap5/examen/2014-enero/gormitis/agua.png"></td>
             <td>agua</td>
@@ -29,7 +33,7 @@
             <td><img src="http://webdidacticarafaelmunoz.appspot.com/lmsgi/ejercicios-cap5/examen/2014-enero/gormitis/aire.jpg"></td>
             <td>aire</td>
          </tr>
-         <tr style="background:&#xA;             #000AFF">
+         <tr style="background:&#xA;             #00CAFF">
             <td>4</td>
             <td><img src="http://webdidacticarafaelmunoz.appspot.com/lmsgi/ejercicios-cap5/examen/2014-enero/gormitis/bosque.png"></td>
             <td>bosque</td>
@@ -38,6 +42,22 @@
             <td>5</td>
             <td><img src="http://webdidacticarafaelmunoz.appspot.com/lmsgi/ejercicios-cap5/examen/2014-enero/gormitis/montana.jpg"></td>
             <td>montana</td>
+         </tr>
+      </table><br><table width="100%" border="1" style="background:url('http://webdidacticarafaelmunoz.appspot.com/lmsgi/ejercicios-cap5/examen/2014-enero/gormitis/islagorm.jpg') no-repeat;">
+         <tr>
+            <td></td>
+            <td><img src="http://webdidacticarafaelmunoz.appspot.com/lmsgi/ejercicios-cap5/examen/2014-enero/gormitis/aire.jpg"></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td><img src="http://webdidacticarafaelmunoz.appspot.com/lmsgi/ejercicios-cap5/examen/2014-enero/gormitis/bosque.png"></td>
+            <td></td>
+            <td><img src="http://webdidacticarafaelmunoz.appspot.com/lmsgi/ejercicios-cap5/examen/2014-enero/gormitis/volcan.png"></td>
+         </tr>
+         <tr>
+            <td></td>
+            <td><img src="http://webdidacticarafaelmunoz.appspot.com/lmsgi/ejercicios-cap5/examen/2014-enero/gormitis/agua.png"></td>
+            <td><img src="http://webdidacticarafaelmunoz.appspot.com/lmsgi/ejercicios-cap5/examen/2014-enero/gormitis/montana.jpg"></td>
          </tr>
       </table>
    </body>
