--- a/XSL/EjerciciosXSL/EjercicioExamenTanques/tanques.html
+++ b/XSL/EjerciciosXSL/EjercicioExamenTanques/tanques.html
@@ -19,62 +19,162 @@
          <tr style="background:&#xA;             #00FAFF;">
             <td>1</td>
             <td>1</td>
-            <td>.</td>
+            <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque1.jpg"></td>
             <td>Comienzo del juego moviendo hacía arriba</td>
          </tr>
          <tr style="background:&#xA;             #00CAFF">
             <td>2</td>
             <td>2</td>
-            <td>.</td>
+            <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque2.jpg"></td>
             <td>Comienzo del juego moviendo hacía abajo</td>
          </tr>
          <tr style="background:&#xA;             #00FAFF;">
             <td>3</td>
             <td>1</td>
-            <td>.</td>
+            <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque1.jpg"></td>
             <td>Movimiento hacía arriba</td>
          </tr>
          <tr style="background:&#xA;             #00CAFF">
             <td>4</td>
             <td>2</td>
-            <td>.</td>
+            <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque2.jpg"></td>
             <td>Movimiento hacía abajo</td>
          </tr>
          <tr style="background:&#xA;             #00FAFF;">
             <td>5</td>
             <td>1</td>
-            <td>.</td>
+            <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque1.jpg"></td>
             <td>Movimiento hacía arriba</td>
          </tr>
          <tr style="background:&#xA;             #00CAFF">
             <td>6</td>
             <td>2</td>
-            <td>.</td>
+            <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque2.jpg"></td>
             <td>Movimiento hacía abajo</td>
          </tr>
          <tr style="background:&#xA;             #00FAFF;">
             <td>7</td>
             <td>1</td>
-            <td>.</td>
+            <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque1.jpg"></td>
             <td>Movimiento hacía arriba</td>
          </tr>
          <tr style="background:&#xA;             #00CAFF">
             <td>8</td>
             <td>2</td>
-            <td>.</td>
+            <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque2.jpg"></td>
             <td>Movimiento hacía abajo</td>
          </tr>
          <tr style="background:&#xA;             #00FAFF;">
             <td>9</td>
             <td>1</td>
-            <td>.</td>
+            <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque1.jpg"></td>
             <td>Movimiento hacía derecha</td>
          </tr>
          <tr style="background:&#xA;             #00CAFF">
             <td>10</td>
             <td>2</td>
-            <td>.</td>
+            <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque2.jpg"></td>
             <td>Movimiento hacía izquierda</td>
+         </tr>
+      </table><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><table border="1">
+         <tr>
+            <th></th>
+            <th>1</th>
+            <th>2</th>
+            <th>3</th>
+            <th>4</th>
+            <th>5</th>
+            <th>6</th>
+            <th>7</th>
+            <th>8</th>
+         </tr>
+         <tr>
+            <th>1</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <th>2</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <th>3</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <th>4</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <th>5</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <th>6</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <th>7</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <th>8</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
          </tr>
       </table>
    </body>
