--- a/XSL/EjerciciosXSL/EjercicioExamenBaloncesto/Baloncesto.html
+++ b/XSL/EjerciciosXSL/EjercicioExamenBaloncesto/Baloncesto.html
@@ -180,12 +180,24 @@
                <td>6</td>
                <td>4</td>
             </tr>
-         </table>
-         <table width="100%" style="background: url('recursos/pista.jpg') no-repeat;" id="tablaCancha">
+         </table><br><br><table width="100%" style="background: url('recursos/pista.jpg') no-repeat;" id="tablaCancha">
             <tr>
-               <td style="background: blue; color: white;">1</td>
+               <td></td>
+               <td><img src="recursos/cbcLucena.png">Juan</td>
                <td></td>
                <td></td>
+               <td></td>
+               <td></td>
+               <td><img src="recursos/Unicaja_CB.png">Silvia</td>
+               <td></td>
+               <td></td>
+               <td></td>
+            </tr>
+            <tr>
+               <td><img src="recursos/cbcLucena.png">Tania</td>
+               <td></td>
+               <td></td>
+               <td><img src="recursos/cbcLucena.png">Antonio</td>
                <td></td>
                <td></td>
                <td></td>
@@ -194,81 +206,98 @@
                <td></td>
             </tr>
             <tr>
-               <td style="background: blue; color: white;">2</td>
                <td></td>
                <td></td>
                <td></td>
                <td></td>
                <td></td>
+               <td><img src="recursos/Unicaja_CB.png">Mar</td>
                <td></td>
+               <td></td>
+               <td></td>
+               <td><img src="recursos/Unicaja_CB.png">Ainhoa</td>
+            </tr>
+            <tr>
+               <td></td>
+               <td></td>
+               <td></td>
+               <td></td>
+               <td><img src="recursos/cbcLucena.png">Jaime</td>
+               <td></td>
+               <td></td>
+               <td><img src="recursos/Unicaja_CB.png">Luis</td>
                <td></td>
                <td></td>
             </tr>
             <tr>
-               <td style="background: blue; color: white;">3</td>
+               <td></td>
+               <td></td>
+               <td><img src="recursos/cbcLucena.png">Esther</td>
                <td></td>
                <td></td>
                <td></td>
                <td></td>
                <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-            </tr>
-            <tr>
-               <td style="background: blue; color: white;">4</td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
+               <td><img src="recursos/Unicaja_CB.png">Chicho</td>
                <td></td>
             </tr>
+         </table><br><br><table border="1" width="100%">
             <tr>
-               <td style="background: blue; color: white;">5</td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
+               <th>Tiempo</th>
+               <th>Jugador</th>
+               <th>Apodo</th>
+               <th>Descripción</th>
+               <th>Icono</th>
             </tr>
             <tr>
-               <td style="background: blue; color: white;">6</td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
+               <td>0:12</td>
+               <td>Jaime</td>
+               <td>Arquero</td>
+               <td>Entrada a canasta y falta
+                  personal</td>
+               <td><img src="recursos/canasta.jpg"></td>
             </tr>
             <tr>
-               <td style="background: blue; color: white;">7</td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
+               <td>0:33</td>
+               <td>Ainhoa</td>
+               <td>Cara de niña</td>
+               <td>Triple</td>
+               <td><img src="recursos/canasta.jpg"></td>
             </tr>
             <tr>
-               <td style="background: blue; color: white;">8</td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
+               <td>0:58</td>
+               <td>Antonio</td>
+               <td>Araña</td>
+               <td>Falta personal</td>
+               <td><img src="recursos/falta.jpg"></td>
+            </tr>
+            <tr>
+               <td>1:00</td>
+               <td>Chicho</td>
+               <td>Capi</td>
+               <td>Dos tiros libres anotados</td>
+               <td><img src="recursos/canasta.jpg"></td>
+            </tr>
+            <tr>
+               <td>1:18</td>
+               <td>Mar</td>
+               <td>Muralla</td>
+               <td>Falta personal</td>
+               <td><img src="recursos/falta.jpg"></td>
+            </tr>
+            <tr>
+               <td>2:20</td>
+               <td>Esther</td>
+               <td>Máquina</td>
+               <td>Triple</td>
+               <td><img src="recursos/canasta.jpg"></td>
+            </tr>
+            <tr>
+               <td>2:33</td>
+               <td>Juan</td>
+               <td>SuperJuan</td>
+               <td>2 puntos</td>
+               <td><img src="recursos/canasta.jpg"></td>
             </tr>
          </table>
       </div>
